--- a/Seance3-Statistiques_descriptives/Slides/SOC8655_S3.4_Visualisation_extensions.Rmd
+++ b/Seance3-Statistiques_descriptives/Slides/SOC8655_S3.4_Visualisation_extensions.Rmd
@@ -1,14 +1,14 @@
 ---
-title: 'Séance 3: Visualisation avec ggplot: Extension'
+title: 'Séance 3.4: Visualisation avec ggplot: Extension'
 author: "Visseho Adjiwanou, PhD."
 institute: "Département de Sociologie - UQAM"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
+  slidy_presentation: default
   beamer_presentation:
     colortheme: beaver
     fonttheme: structurebold
     theme: Ilmenau
-  slidy_presentation: default
   ioslides_presentation: default
 header-includes:
   - \usepackage{color}
@@ -33,7 +33,7 @@ Extension
 library(tidyverse)
 library(ggpubr)
 
-dhs_ipv <- read_csv("dhs_ipv.csv")
+dhs_ipv <- read_csv("../Data/dhs_ipv.csv")
 
 dhs_ipv<-
   dhs_ipv %>% 
@@ -43,7 +43,7 @@ dhs_ipv<-
          no_media_cat = factor(ntile(no_media, 3), labels = c('riche', 'moyen', 'pauvre')))
 
 
-crsc96 <- read_csv("cora-crsc1996-E-1996_F1.csv")
+crsc96 <- read_csv("../Data/cora-crsc1996-E-1996_F1.csv")
 
 crsc96_small <-
   crsc96 %>% 
@@ -61,26 +61,26 @@ Exemples: Visualiser la distribution univariée: extension
 
 ## Exemples: Visualiser la distribution univariée: extension
 
-* Plus dans aes : mappage
-* Facets
-* Représentation de plusieurs graphiques sur une même figure
-* Les scales
-* Les thèmes 
+- Plus dans aes : mappage
+- Facets
+- Représentation de plusieurs graphiques sur une même figure
+- Les scales
+- Les thèmes 
 
 
 ## 1. Exemple: Plus dans aes
 
-* A la différence de boxplot qui nous permet de comparer les distributions de manière compact entre différents groupes, les autres graphiques portaient sur l'ensemble de l'échantillon.
-* Que faire pour comparer par exemple des histogrammes ou des diagrammes de barres de différents sous-échantillons?
-* Vous devez pensez immédiatement à :
-  * **by_group**
-* Malheureusement, il ne marche pas avec ggplot.
-* Il faut utiliser le **mappage**
-* Un mappage, dans ggplot2, est une mise en relation entre un **attribut graphique du geom** (position (*position*), couleur (*color*), taille (*size*)…) et une variable du tableau de données.
+- A la différence de boxplot qui nous permet de comparer les distributions de manière compact entre différents groupes, les autres graphiques portaient sur l'ensemble de l'échantillon.
+- Que faire pour comparer par exemple des histogrammes ou des diagrammes de barres de différents sous-échantillons?
+- Vous devez pensez immédiatement à :
+  - **by_group**
+- Malheureusement, il ne marche pas avec ggplot.
+- Il faut utiliser le **mappage**
+- Un mappage, dans ggplot2, est une mise en relation entre un **attribut graphique du geom** (position (*position*), couleur (*color*), taille (*size*)…) et une variable du tableau de données.
 
 ## Exemple: Plus dans aes
 
-```{r, out.width= '65%', message = FALSE}
+```{r, out.width= '65%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_histogram(aes(x = beat_burnfood, color = region))
@@ -106,7 +106,7 @@ e <- ggplot(dhs_ipv) +
 
 ## 1. Exemple: Plus dans aes
 
-```{r, out.width= '80%', message = FALSE}
+```{r, out.width= '80%', message = FALSE, fig.align='center'}
 
 ggarrange(c, d, e, ncol = 3)
 
@@ -118,9 +118,9 @@ Exemple: Facets
 
 ## 2. Exemple: Facets
 
-* Le **faceting** permet d’effectuer plusieurs fois le même graphique selon les valeurs d’une ou plusieurs variables qualitatives (notre *group_by*).
+- Le **faceting** permet d’effectuer plusieurs fois le même graphique selon les valeurs d’une ou plusieurs variables qualitatives (notre *group_by*).
 
-```{r, out.width= '50%', message = FALSE}
+```{r, out.width= '50%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_histogram(aes(x = beat_burnfood, color = region))
@@ -129,7 +129,7 @@ ggplot(dhs_ipv) +
 
 ## 2. Exemple: Facets
 
-```{r, out.width= '50%', message = FALSE}
+```{r, out.width= '50%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_histogram(aes(x = beat_burnfood, fill = region)) +
@@ -139,7 +139,7 @@ ggplot(dhs_ipv) +
 
 ## 2. Exemple: Facets
 
-```{r, out.width= '55%', message = FALSE}
+```{r, out.width= '55%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_histogram(aes(x = beat_burnfood)) +
@@ -154,7 +154,7 @@ Représentation de plusieurs graphiques sur une même figure
 
 ## Représentation de plusieurs graphiques sur une même figure
 
-```{r, out.width= '40%', message = FALSE}
+```{r, out.width= '40%', message = FALSE, fig.align='center'}
 ggplot(dhs_ipv) + 
   geom_boxplot(aes(x = region, y = beat_burnfood)) +
   geom_point(aes(x = region, y = beat_burnfood))
@@ -186,7 +186,7 @@ b <- ggplot(dhs_ipv, aes(x = region, y = beat_burnfood)) +
 ## Représentation de plusieurs graphiques sur une même figure
 
 
-```{r, out.width= '50%', message = FALSE}
+```{r, out.width= '50%', message = FALSE, warning=FALSE, fig.align='center'}
 b 
 ```
 
@@ -200,7 +200,7 @@ Les scales
 
 ## Les scales
 
-```{r, out.width= '60%', message = FALSE}
+```{r, out.width= '60%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_point(aes(x = sec_school, y = beat_burnfood, color = region, size = beat_burnfood)) +
@@ -210,7 +210,7 @@ ggplot(dhs_ipv) +
 
 ## Les scales
 
-```{r, out.width= '60%', message = FALSE}
+```{r, out.width= '60%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_point(aes(x = sec_school, y = beat_burnfood, color = region, size = beat_burnfood)) +
@@ -220,7 +220,7 @@ ggplot(dhs_ipv) +
 
 ## Les scales
 
-```{r, out.width= '50%', message = FALSE}
+```{r, out.width= '50%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_bar(aes(x = region), fill = "red", alpha = 0.5) +
@@ -231,7 +231,7 @@ ggplot(dhs_ipv) +
 
 ## Les scales
 
-```{r, out.width= '60%', message = FALSE}
+```{r, out.width= '60%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_point(aes(x = sec_school, y = beat_burnfood, color = beat_burnfood)) +
@@ -242,7 +242,7 @@ ggplot(dhs_ipv) +
 
 ## Les scales
 
-```{r, out.width= '60%', message = FALSE}
+```{r, out.width= '60%', message = FALSE, warning=FALSE, fig.align='center'}
 
 ggplot(dhs_ipv) +
   geom_point(aes(x = sec_school, y = beat_burnfood, color = beat_burnfood)) +
@@ -268,15 +268,21 @@ a <- ggplot(dhs_ipv) +
   ylab("Effectif") +
   theme_bw()
 
-
 ```
 
 ## Les thèmes 
 
-```{r, out.width= '65%', message = FALSE}
+```{r, out.width= '65%', message = FALSE, fig.align='center'}
 
 a
 
 ```
+
+Ressources 
+========================================================
+
+## Ressources
+
+- https://exts.ggplot2.tidyverse.org/gallery/
 
 
