--- a/Seance1-Presentation_cours/Labo1/SOC8655_Lab1_Introduction_R_Nouveau.Rmd
+++ b/Seance1-Presentation_cours/Labo1/SOC8655_Lab1_Introduction_R_Nouveau.Rmd
@@ -24,6 +24,9 @@ knitr::include_graphics("/Users/visseho/OneDrive - UQAM/Cours/Images_cours/joke2
 ```
 
 
+kouadio
+
+
 ## Au programme
 
 <!--$\color{blue}{\text{B. Deuxième partie}}$-->
